# change-of-system

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.ini  config.ini.example
cmake/: DetectPlatform.cmake
src/: CMakeLists.txt  main.cpp
src/alert/: alert_manager.cpp  alert_manager.h
src/config/: config_store.cpp  config_store.h  config_watcher.cpp  config_watcher.h
src/core/: event.cpp  event.h  monitor.cpp  monitor.h  monitor_engine.cpp  monitor_engine.h
src/diagnostic/: diagnostic_runner.cpp  diagnostic_runner.h
src/export/: event_exporter.cpp  event_exporter.h
src/filter/: event_filter.cpp  event_filter.h
src/gui/: main_gui.cpp  main_window.cpp  main_window.h
src/info/: system_info.cpp  system_info.h
src/monitor/disk_space/: disk_space_monitor.cpp  disk_space_monitor.h
src/monitor/environment/: environment_monitor.cpp  environment_monitor.h
src/monitor/file_integrity/: file_integrity_monitor.cpp  file_integrity_monitor.h
src/monitor/filesystem/: filesystem_monitor.cpp  filesystem_monitor.h
src/monitor/log/: log_monitor.cpp  log_monitor.h
src/monitor/network/: network_monitor.cpp  network_monitor.h
src/monitor/package/: package_monitor.cpp  package_monitor.h
src/monitor/port/: port_monitor.cpp  port_monitor.h
src/monitor/process/: process_monitor.cpp  process_monitor.h
src/monitor/service/: service_monitor.cpp  service_monitor.h
src/monitor/system_config/: system_config_monitor.cpp  system_config_monitor.h
src/monitor/system_load/: system_load_monitor.cpp  system_load_monitor.h
src/monitor/usb_device/: usb_device_monitor.cpp  usb_device_monitor.h
src/monitor/user_activity/: user_activity_monitor.cpp  user_activity_monitor.h
src/platform/: platform_detection.cpp  platform_detection.h  privilege.cpp  privilege.h
src/query/: event_query.cpp  event_query.h
src/report/: report_generator.cpp  report_generator.h
src/reporting/: reporter.cpp  reporter.h
src/security/: security_auditor.cpp  security_auditor.h
src/snapshot/: snapshot_generator.cpp  snapshot_generator.h
src/snapshot_diff/: snapshot_diff.cpp  snapshot_diff.h
src/stats/: statistics.cpp  statistics.h
src/storage/: storage.cpp  storage.h
src/tail/: tail_watcher.cpp  tail_watcher.h
src/updater/: updater.cpp  updater.h
src/utils/: daemon.cpp  daemon.h  logger.h  periodic_runner.h
src/validate/: config_validator.cpp  config_validator.h
src/webhook/: webhook_notifier.cpp  webhook_notifier.h
tests/: CMakeLists.txt  test_event.cpp  test_monitor_engine.cpp
